# OASIS-Holochain-hApp

./: BUILD.bat  BUILD_SCAFFOLDING.bat  Cargo.toml  README.md  package-lock.json  package.json
OLD/: .hc  RUN.bat
OLD/dna/coordinator_zomes/oasis_zome/: Cargo.toml
OLD/dna/coordinator_zomes/oasis_zome/src/: avatar.rs
OLD/dna/integrity_zomes/oasis_zome_integrity/: Cargo.toml
OLD/dna/integrity_zomes/oasis_zome_integrity/src/: lib.rs
OLD/dna/integrity_zomes/oasis_zome_integrity/src/avatar/: definition.rs
OLD/dna/workdir/dna/: oasis_dna.dna
OLD/dna/workdir/happ/: oasis-happ.happ
OLD/zomes/workdir/dna/: oasis_dna.dna
dna/coordinator_zomes/oasis_zome/src/: lib.rs
dna/workdir/dna/: dna.yaml
dnas/holonet_api/workdir/: dna.yaml
dnas/holonet_api/zomes/coordinator/holonet_api/: Cargo.toml
dnas/holonet_api/zomes/coordinator/holonet_api/src/: all_data.rs  data.rs  lib.rs
dnas/holonet_api/zomes/integrity/holonet_api/: Cargo.toml
dnas/holonet_api/zomes/integrity/holonet_api/src/: data.rs  lib.rs
dnas/oasis/workdir/: dna.yaml
dnas/oasis/zomes/coordinator/oasis/: Cargo.toml
dnas/oasis/zomes/coordinator/oasis/src/: all_avatars.rs  avatar.rs  holon.rs  lib.rs
dnas/oasis/zomes/integrity/oasis/: Cargo.toml
dnas/oasis/zomes/integrity/oasis/src/: avatar.rs  lib.rs
tests/src/oasis/oasis/: all-avatars.test.ts  avatar.test.ts  common.ts
ui/src/: App.vue
ui/src/oasis/oasis/: AllAvatars.vue  AvatarDetail.vue  CreateAvatar.vue  EditAvatar.vue  types.ts
workdir/: happ.yaml
zomes/oasis/: Cargo.toml
zomes/oasis/src/: lib.rs
zomes/workdir/dna/: dna.yaml
zomes/workdir/happ/: happ.yaml  oasis_happ.happ
