[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.3"
hdk = "=0.1.3"
serde = "1"

[workspace.dependencies.holonet_api]
path = "dnas/holonet_api/zomes/coordinator/holonet_api"

[workspace.dependencies.holonet_api_integrity]
path = "dnas/holonet_api/zomes/integrity/holonet_api"
